# CPE494_game_development_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  convert.py
src/: main.cpp  model_loading_1.fs  model_loading_1.vs
src/crystal/: stylized_crystal_SM.mtl
src/demon/: demon.h
src/demon/object/: Crouch Idle.dae  Crouch To Standing Idle.dae  Crouch Turn Left 90.dae  Crouch Turn Right 90.dae  Crouch Walk Back.dae  Crouch Walk Forward.dae  Crouch Walk Left.dae  Crouch Walk Right.dae  Standing 1H Magic Attack 01.dae  Standing 1H Magic Attack 02.dae  Standing 1H Magic Attack 03.dae  Standing 2H Cast Spell 01.dae  Standing 2H Magic Area Attack 01.dae  Standing 2H Magic Area Attack 02.dae  Standing 2H Magic Attack 01.dae  Standing 2H Magic Attack 02.dae  Standing 2H Magic Attack 03.dae  Standing 2H Magic Attack 04.dae  Standing 2H Magic Attack 05.dae  Standing Block End.dae  Standing Block Idle.dae  Standing Block React Large.dae  Standing Block Start.dae  Standing Idle 03.dae  Standing Idle 04.dae  Standing Idle To Crouch.dae  Standing Idle.dae  Standing Jump Running Landing.dae  Standing Jump Running.dae  Standing Jump.dae  Standing Land To Standing Idle.dae  Standing React Death Backward.dae  Standing React Death Forward.dae  Standing React Death Left.dae  Standing React Death Right.dae  Standing React Large From Back.dae  Standing React Large From Front.dae  Standing React Large From Left.dae  Standing React Large From Right.dae  Standing React Small From Back.dae  (+17 more)
src/staff/: Staff.mtl
